adding images to drive

--- a/processing_dataset/feature_extraction.ipynb
+++ b/processing_dataset/feature_extraction.ipynb
@@ -21,43 +21,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "eiHXMskx2ojl",
-        "outputId": "c01480f6-ea28-4f0f-8573-d49165334151"
+        "outputId": "7a20e512-3e93-4064-f997-1e6d5d9f8a25"
       },
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Downloading from https://www.kaggle.com/api/v1/datasets/download/jessicali9530/lfw-dataset?dataset_version_number=4...\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 112M/112M [00:00<00:00, 254MB/s] "
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Extracting files...\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stdout",
@@ -76,20 +48,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7rZ-bi5f7Mhd",
-        "outputId": "0bb55897-cf57-4672-8a44-5d1dae3e7989"
+        "outputId": "a8a00141-d911-48d6-85d2-b8e3dad85fed"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "['/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Erin_Hershey_Presley/Erin_Hershey_Presley_0001.jpg', '/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Denise_van_Outen/Denise_van_Outen_0001.jpg', '/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Jim_Greenwood/Jim_Greenwood_0001.jpg', '/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Tara_Reid/Tara_Reid_0001.jpg', '/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Kellie_Coffey/Kellie_Coffey_0001.jpg']\n"
+            "['/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Pete_Carroll/Pete_Carroll_0001.jpg', '/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Pete_Carroll/Pete_Carroll_0002.jpg', '/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Pete_Carroll/Pete_Carroll_0003.jpg', '/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Michael_Hagee/Michael_Hagee_0001.jpg', '/root/.cache/kagglehub/datasets/jessicali9530/lfw-dataset/versions/4/lfw-deepfunneled/lfw-deepfunneled/Ontario_Lett/Ontario_Lett_0001.jpg']\n"
           ]
         }
       ],
@@ -127,13 +99,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "81bwLf5yD_va",
-        "outputId": "abe80010-8f29-4d2f-de81-fdecdf850c0b"
+        "outputId": "c3e66eb2-447c-42ff-b58d-a6023d5bc9c5"
       },
       "outputs": [
         {
@@ -141,7 +113,10 @@
           "name": "stdout",
           "text": [
             "total datapoints having person atleast 10 images are 4324\n",
-            "total different persons are 158\n"
+            "total different persons are 158\n",
+            "\n",
+            "total datapoints having person atleast 80 images are 1140\n",
+            "total different persons are 5\n"
           ]
         }
       ],
@@ -162,8 +137,16 @@
         "for person in person_imagepath:\n",
         "    total_filtered_datapoints+=len(person_imagepath[person])\n",
         "\n",
+        "person_imagepath_2 = {person: images for person, images in person_imagepath.items() if len(images) >= 80}\n",
+        "total_filtered_datapoints_2=0\n",
+        "for person in person_imagepath_2:\n",
+        "    total_filtered_datapoints_2+=len(person_imagepath_2[person])\n",
+        "\n",
         "print(\"total datapoints having person atleast 10 images are\",total_filtered_datapoints)\n",
-        "print(\"total different persons are\", len(person_imagepath))\n"
+        "print(\"total different persons are\", len(person_imagepath))\n",
+        "print()\n",
+        "print(\"total datapoints having person atleast 80 images are\",total_filtered_datapoints_2)\n",
+        "print(\"total different persons are\", len(person_imagepath_2))\n"
       ]
     },
     {
@@ -173,7 +156,7 @@
         "import shutil\n",
         "\n",
         "# Create main directory to hold subfolders\n",
-        "main_directory = \"filtered_dataset\"\n",
+        "main_directory = \"atleast_10_images\"\n",
         "os.makedirs(main_directory, exist_ok=True)\n",
         "\n",
         "# Create subfolders and copy images\n",
@@ -183,22 +166,36 @@
         "    for image_path in image_paths:\n",
         "        shutil.copy(image_path, person_folder)\n",
         "\n",
-        "print(\"Images organized into folders by person.\")"
+        "print(\"Images organized into folders by person with atleast 10 images.\")\n",
+        "\n",
+        "# Create main directory to hold subfolders\n",
+        "main_directory = \"atleast_80_images\"\n",
+        "os.makedirs(main_directory, exist_ok=True)\n",
+        "\n",
+        "# Create subfolders and copy images\n",
+        "for person, image_paths in person_imagepath_2.items():\n",
+        "    person_folder = os.path.join(main_directory, person)\n",
+        "    os.makedirs(person_folder, exist_ok=True)\n",
+        "    for image_path in image_paths:\n",
+        "        shutil.copy(image_path, person_folder)\n",
+        "\n",
+        "print(\"Images organized into folders by person with atleast 80 images.\")"
       ],
       "metadata": {
         "id": "CMbjzc6zvAGJ",
-        "outputId": "ba3080da-e32d-4984-f9f1-150897a296c7",
+        "outputId": "cc125e02-3818-48ec-ba0d-9a91ed21f743",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Images organized into folders by person.\n"
+            "Images organized into folders by person with atleast 10 images.\n",
+            "Images organized into folders by person with atleast 80 images.\n"
           ]
         }
       ]
@@ -206,31 +203,46 @@
     {
       "cell_type": "code",
       "source": [
-        "folder_to_zip = \"filtered_dataset\"\n",
-        "zip_filename = folder_to_zip  # This will create 'filtered_dataset.zip'\n",
-        "\n",
-        "# Create zip archive\n",
-        "shutil.make_archive(zip_filename, 'zip', folder_to_zip)\n",
-        "\n",
-        "print(f\"Zipped folder saved as {zip_filename}.zip\")"
+        "# from google.colab import drive\n",
+        "# drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "h_3UCCpEv6rG",
-        "outputId": "ec45ed4d-5aba-4784-cd5d-8f42b88bea10",
+        "id": "MgmiwwTiLFcv",
+        "outputId": "98913f2b-55e4-42cb-bbe4-d853c9eae1e2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Zipped folder saved as filtered_dataset.zip\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "now drag those two new folders in your drive. then unmount drive"
+      ],
+      "metadata": {
+        "id": "RvwU8TqrMRJ-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# drive.flush_and_unmount()"
+      ],
+      "metadata": {
+        "id": "tZ0jvuAjLyjY"
+      },
+      "execution_count": 12,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -1950,10 +1962,12 @@
     }
   ],
   "metadata": {
+    "accelerator": "TPU",
     "colab": {
       "collapsed_sections": [
         "svIt5l3bdrY_"
       ],
+      "gpuType": "V28",
       "provenance": [],
       "include_colab_link": true
     },
