--- a/SVM_prml_project.ipynb
+++ b/SVM_prml_project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNIsjZ4nPgTNK5tj3FxvfxI",
+      "authorship_tag": "ABX9TyOrn7jzxfmk75e/znfknHsD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/AgarwalMayank2/Face_Detection/blob/SVM_Ekta/SVM_prml_project.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **SVM Algorithm**"
+      ],
+      "metadata": {
+        "id": "jvWp-RYoc7k8"
+      }
     },
     {
       "cell_type": "markdown",
@@ -759,12 +768,12 @@
         "df_CNN"
       ],
       "metadata": {
-        "id": "8BkOiJbyVwvk",
-        "outputId": "4d0c867f-c6be-4388-fce2-925efeeaffaf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 443
-        }
+        },
+        "id": "8BkOiJbyVwvk",
+        "outputId": "4d0c867f-c6be-4388-fce2-925efeeaffaf"
       },
       "execution_count": 20,
       "outputs": [
@@ -1415,6 +1424,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# **Splitting dataframe into train, validation and test in 4:1 ratio**"
+      ],
+      "metadata": {
+        "id": "03uL7DhMdT1x"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Separate features and labels\n",
@@ -1452,6 +1470,15 @@
       },
       "execution_count": 22,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Linear SVM"
+      ],
+      "metadata": {
+        "id": "nGIJCiv3dosB"
+      }
     },
     {
       "cell_type": "code",
@@ -1590,6 +1617,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Kernel SVM"
+      ],
+      "metadata": {
+        "id": "_N-0HRMLdvcu"
+      }
     },
     {
       "cell_type": "code",
