adding y encoding for 5 labels

--- a/applying_ML_algorithms/Decision_Tree_PRMLproj.ipynb
+++ b/applying_ML_algorithms/Decision_Tree_PRMLproj.ipynb
@@ -90,7 +90,7 @@
       "metadata": {
         "id": "5d5y0LqN6ez7"
       },
-      "execution_count": 256,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -138,7 +138,7 @@
       "metadata": {
         "id": "Vx-OAfn26wNb"
       },
-      "execution_count": 257,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -161,7 +161,7 @@
       "metadata": {
         "id": "ln9jMSpi6zyS"
       },
-      "execution_count": 258,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -184,7 +184,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 259,
+      "execution_count": 4,
       "metadata": {
         "id": "6M8EKNTFKuoe"
       },
@@ -197,10 +197,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 260,
+      "execution_count": 5,
       "metadata": {
         "id": "g0E2_CS2Kuof",
-        "outputId": "cb3a974d-28b1-46f0-b49a-079ed92baddb",
+        "outputId": "7993f964-e5c2-4434-a521-8c65d27dc611",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
@@ -267,7 +267,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8c8cb91c-e10c-4738-9095-1530d8c272f6\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-15f212fe-a87e-4b62-892b-265195ea5786\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -581,7 +581,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8c8cb91c-e10c-4738-9095-1530d8c272f6')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-15f212fe-a87e-4b62-892b-265195ea5786')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -633,12 +633,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-8c8cb91c-e10c-4738-9095-1530d8c272f6 button.colab-df-convert');\n",
+              "        document.querySelector('#df-15f212fe-a87e-4b62-892b-265195ea5786 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-8c8cb91c-e10c-4738-9095-1530d8c272f6');\n",
+              "        const element = document.querySelector('#df-15f212fe-a87e-4b62-892b-265195ea5786');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -658,8 +658,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-266ebbb7-633f-45f4-8b16-b4cb9b6fba9b\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-266ebbb7-633f-45f4-8b16-b4cb9b6fba9b')\"\n",
+              "<div id=\"df-a1ea054f-da1b-40e7-ad08-9cbf649bcdd3\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-a1ea054f-da1b-40e7-ad08-9cbf649bcdd3')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -778,14 +778,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-266ebbb7-633f-45f4-8b16-b4cb9b6fba9b button');\n",
+              "        document.querySelector('#df-a1ea054f-da1b-40e7-ad08-9cbf649bcdd3 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_6e95c5bf-15fd-4cd4-84a0-f1628305fa8e\">\n",
+              "  <div id=\"id_452cc7bd-1403-47dc-be8d-fa729d157c55\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -829,7 +829,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_6e95c5bf-15fd-4cd4-84a0-f1628305fa8e button.colab-df-generate');\n",
+              "        document.querySelector('#id_452cc7bd-1403-47dc-be8d-fa729d157c55 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -849,7 +849,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 260
+          "execution_count": 5
         }
       ],
       "source": [
@@ -881,10 +881,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 261,
+      "execution_count": 6,
       "metadata": {
         "id": "V6trajq0Kuog",
-        "outputId": "f26ebd64-18c2-460e-92d9-4f2fbd98319a",
+        "outputId": "26d8b25e-e2a7-4074-a217-a8061c335e42",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -941,6 +941,38 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "y_encoded_unique = np.unique(y_encoded)\n",
+        "for i in label_encoder.inverse_transform(y_encoded_unique):\n",
+        "    print(i)\n",
+        "#\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "YSwJ8LwiHbZ1",
+        "outputId": "213fc9c7-0dcb-40b5-8030-200c1e9222aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Colin_Powell\n",
+            "Donald_Rumsfeld\n",
+            "George_W_Bush\n",
+            "Gerhard_Schroeder\n",
+            "Tony_Blair\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "## Applying DT on CNN data"
@@ -974,13 +1006,13 @@
       ],
       "metadata": {
         "id": "UbjtL9KXM5KZ",
-        "outputId": "ae434c84-2bae-4e0d-c6b6-a69c0c4bb045",
+        "outputId": "45184d9a-946d-419b-e3e4-732c3f0b414e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 430
         }
       },
-      "execution_count": 262,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1014,9 +1046,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fd7ee281-f50f-48be-c265-1dfedc527060"
+        "outputId": "d646400a-fe80-49c7-c7ad-20298ed4aa73"
       },
-      "execution_count": 263,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -1071,13 +1103,13 @@
       ],
       "metadata": {
         "id": "8boc3SR3buS7",
-        "outputId": "7cfcddef-b878-4a64-b50d-0f1bda4cff1d",
+        "outputId": "c042098e-096b-4f68-8ac2-bcec35a54736",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
         }
       },
-      "execution_count": 264,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1126,7 +1158,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-9dca8ea8-a4e3-4a09-a056-7e0747f94992\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-1e2d85ac-ce6a-4166-b617-ac62747d9138\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1440,7 +1472,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9dca8ea8-a4e3-4a09-a056-7e0747f94992')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1e2d85ac-ce6a-4166-b617-ac62747d9138')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1492,12 +1524,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-9dca8ea8-a4e3-4a09-a056-7e0747f94992 button.colab-df-convert');\n",
+              "        document.querySelector('#df-1e2d85ac-ce6a-4166-b617-ac62747d9138 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-9dca8ea8-a4e3-4a09-a056-7e0747f94992');\n",
+              "        const element = document.querySelector('#df-1e2d85ac-ce6a-4166-b617-ac62747d9138');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1517,8 +1549,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-630d738f-f5c1-4464-aeee-0a0a9116860a\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-630d738f-f5c1-4464-aeee-0a0a9116860a')\"\n",
+              "<div id=\"df-b112e0e9-9d55-4308-935f-de6c86cddf16\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b112e0e9-9d55-4308-935f-de6c86cddf16')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1637,14 +1669,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-630d738f-f5c1-4464-aeee-0a0a9116860a button');\n",
+              "        document.querySelector('#df-b112e0e9-9d55-4308-935f-de6c86cddf16 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_8fcba3f7-a79d-42c1-bf1b-0e1022a45614\">\n",
+              "  <div id=\"id_112455fd-dee5-4124-8cf2-21f2db33dd4f\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -1688,7 +1720,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_8fcba3f7-a79d-42c1-bf1b-0e1022a45614 button.colab-df-generate');\n",
+              "        document.querySelector('#id_112455fd-dee5-4124-8cf2-21f2db33dd4f button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -1708,7 +1740,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 264
+          "execution_count": 9
         }
       ]
     },
@@ -1760,12 +1792,12 @@
       ],
       "metadata": {
         "id": "nIZr_BbzH0J5",
-        "outputId": "236b7943-4c12-4b81-e985-22ccf6a6855e",
+        "outputId": "89f685e4-7bdc-408e-ff55-df9225747490",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 265,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1812,13 +1844,13 @@
       ],
       "metadata": {
         "id": "KJnzk0MHLwqm",
-        "outputId": "c31bdc89-c4b1-4cfb-db4d-60a5fb63cda4",
+        "outputId": "6c37937d-c46f-4157-bc90-a5230ac00b1f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 430
         }
       },
-      "execution_count": 266,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1848,12 +1880,12 @@
       ],
       "metadata": {
         "id": "kg-Mi0l9KZvz",
-        "outputId": "080103b0-10d7-421e-fc69-85dde00b255d",
+        "outputId": "b38c3b7a-9044-45aa-fe4c-2863f762978b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 267,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -1871,7 +1903,7 @@
       "metadata": {
         "id": "qGsvcFEt4Kic"
       },
-      "execution_count": 267,
+      "execution_count": 12,
       "outputs": []
     },
     {
