adding some comments

--- a/applying_ML_algorithms/KNN_PRMLproj.ipynb
+++ b/applying_ML_algorithms/KNN_PRMLproj.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "L_9GgieIJlTd"
       ],
-      "authorship_tag": "ABX9TyOygvZD+534XUUydJBKltn7",
+      "authorship_tag": "ABX9TyPpW1vQIqSACrIFsYgocCQu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,7 +26,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/AgarwalMayank2/Face_Detection/blob/main/applying_ML_algorithms/KNN_PRMLproj.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/AgarwalMayank2/Face_Identification/blob/main/applying_ML_algorithms/KNN_PRMLproj.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -148,7 +148,7 @@
       "metadata": {
         "id": "-nK2cWpxJsz3"
       },
-      "execution_count": 33,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -168,7 +168,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6f7b6761-de3f-4247-9bc8-1ed18d219e1d"
+        "outputId": "d1a85089-ea12-4d66-d1b2-8080bb17c5de"
       },
       "outputs": [
         {
@@ -200,14 +200,16 @@
         "filtered_df_cnn.head()\n",
         "person_counts=filtered_df_cnn['2048'].value_counts()\n",
         "print(person_counts)\n",
-        "print(filtered_df_cnn.shape)"
+        "print(filtered_df_cnn.shape)\n",
+        "print(\"hi\")\n",
+        "print(label_counts)"
       ],
       "metadata": {
         "id": "mfBOHr069Kdh",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3468d8be-edbc-44c3-82ef-c351d1a0828b"
+        "outputId": "d5e4bd98-1bfc-4a15-a547-5fbfdf42c7be"
       },
       "execution_count": 9,
       "outputs": [
@@ -222,14 +224,28 @@
             "Gerhard_Schroeder    105\n",
             "Tony_Blair           105\n",
             "Name: count, dtype: int64\n",
-            "(525, 2049)\n"
+            "(525, 2049)\n",
+            "hi\n",
+            "2048\n",
+            "George_W_Bush          530\n",
+            "Colin_Powell           236\n",
+            "Tony_Blair             144\n",
+            "Donald_Rumsfeld        121\n",
+            "Gerhard_Schroeder      109\n",
+            "                      ... \n",
+            "Paradorn_Srichaphan     10\n",
+            "Jason_Kidd              10\n",
+            "Bill_McBride            10\n",
+            "Javier_Solana           10\n",
+            "Paul_Wolfowitz          10\n",
+            "Name: count, Length: 158, dtype: int64\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-9-f9366ac96588>:4: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
+            "<ipython-input-9-74e6e61ddeb4>:4: DeprecationWarning: DataFrameGroupBy.apply operated on the grouping columns. This behavior is deprecated, and in a future version of pandas the grouping columns will be excluded from the operation. Either pass `include_groups=False` to exclude the groupings or explicitly select the grouping columns after groupby to silence this warning.\n",
             "  filtered_df_cnn = filtered_df_cnn.groupby('2048').apply(lambda x: x.sample(min(len(x), 105), random_state=42)).reset_index(drop=True)\n"
           ]
         }
@@ -246,13 +262,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cOdOJRPmJXLk",
-        "outputId": "da750d75-d8ea-490b-83df-6f04c5c8d079"
+        "outputId": "773b95e3-0f71-4234-e706-b21182af4b33"
       },
       "outputs": [
         {
@@ -297,7 +313,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 15,
       "metadata": {
         "id": "Lcv0-yj-oC7e"
       },
@@ -317,7 +333,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -349,7 +365,7 @@
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
-        "print(np.sum(pca.explained_variance_ratio_))  # Should be close to 1"
+        "print(np.sum(pca.explained_variance_ratio_))  # Should be close to 1; how much variance each principal component is explaining"
       ],
       "metadata": {
         "id": "BXaJ8rPY-VAt",
@@ -358,7 +374,7 @@
         },
         "outputId": "0b275b68-d917-4dbf-c3cd-7c1ad9f25213"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -399,7 +415,7 @@
         "id": "-XHjQn7PRdlK",
         "outputId": "e42da57a-3909-4aa4-a392-6271cb361f3c"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -436,7 +452,7 @@
         "id": "Ymwq48vA-jQg",
         "outputId": "85dcee97-55dd-4f02-8fa6-96b8e9961846"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,7 +504,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5c47efb0-1d55-47b7-a2cf-4d0b23774330"
+        "outputId": "5ed2a0d1-70ec-4be0-cd01-b90dec0c51da"
       },
       "execution_count": 17,
       "outputs": [
@@ -555,7 +571,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Abp0KaGlieJZ",
-        "outputId": "7b316791-a994-4e8b-b15a-b652197dc5db"
+        "outputId": "2bde5fcd-fd99-4520-8f2b-ed885d7ed0b6"
       },
       "outputs": [
         {
@@ -609,7 +625,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -650,7 +666,7 @@
         },
         "id": "dWa6jjo7V2qx"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -691,7 +707,7 @@
         "id": "sAUVWGXLRfDO",
         "outputId": "41113d04-0645-462d-ecdd-83531df7063f"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -726,9 +742,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uloPrW9AI3C1",
-        "outputId": "f4e84d58-b418-46ca-f252-41410b03188b"
+        "outputId": "a872f72b-2320-4dab-91cc-866707cd55ce"
       },
-      "execution_count": 22,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -970,13 +986,13 @@
     {
       "cell_type": "code",
       "source": [
-        "combined_X_train = np.concatenate((X_train_cnn, X_train_LBP), axis=1)\n",
+        "combined_X_train = np.concatenate((X_train_cnn, X_train_LBP), axis=1) # axis = 1 => concatenate columns\n",
         "combined_X_test = np.concatenate((X_test_cnn, X_test_LBP), axis=1)"
       ],
       "metadata": {
         "id": "_1nI48vn_lW9"
       },
-      "execution_count": 23,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -990,9 +1006,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5Z-mYjihBS35",
-        "outputId": "8bc12600-8453-4a79-bc3c-9955feac1fe8"
+        "outputId": "069d75bf-89b0-43a8-eff2-026a0f33a9cf"
       },
-      "execution_count": 24,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -1015,9 +1031,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eBpg84eHFHdj",
-        "outputId": "f35c82d3-794d-442f-eed3-db7e958f0e9c"
+        "outputId": "8db01d8c-3ad2-4253-ccca-29a0fe955aca"
       },
-      "execution_count": 25,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -1054,9 +1070,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mpcm4fUqFjT9",
-        "outputId": "14a1ff06-1743-4f73-8c5f-3ee52d37f13e"
+        "outputId": "a37b6c89-b188-41d5-8423-d3cbd9afd091"
       },
-      "execution_count": 26,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -1096,9 +1112,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5B8U4hwdHvlU",
-        "outputId": "dbafed42-07f7-4850-80ff-dece39ae83fe"
+        "outputId": "b9481605-83e4-496e-e9d0-5e8deb1f043f"
       },
-      "execution_count": 27,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -1130,7 +1146,7 @@
       "metadata": {
         "id": "iF-anFGZ7XuM"
       },
-      "execution_count": 28,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -1142,7 +1158,7 @@
       "metadata": {
         "id": "CoIntBTlaBcN"
       },
-      "execution_count": 29,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -1157,7 +1173,7 @@
         "id": "1o-3N04ohKYs",
         "outputId": "dd07450c-28d4-4d2c-b988-d4044a0a948b"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1202,10 +1218,23 @@
         "print(\"Train accuracies = \", train_accuracies)"
       ],
       "metadata": {
-        "id": "0FFrIIkGOVnl"
+        "id": "0FFrIIkGOVnl",
+        "outputId": "ccfe4d2a-c5f4-46b4-dce4-15d08a792f76",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": 32,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Test accuracies =  [(1, 51.42857142857142), (2, 51.42857142857142), (3, 50.476190476190474), (4, 51.42857142857142), (5, 57.14285714285714), (6, 58.0952380952381), (7, 60.0), (8, 60.0), (9, 58.0952380952381)]\n",
+            "Train accuracies =  [(1, 100.0), (2, 100.0), (3, 90.0), (4, 84.28571428571429), (5, 81.42857142857143), (6, 79.52380952380952), (7, 78.0952380952381), (8, 76.19047619047619), (9, 74.76190476190476)]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1228,13 +1257,13 @@
       ],
       "metadata": {
         "id": "KOcsyXXxXxMN",
-        "outputId": "579b0558-29f0-4799-8fce-5c1cee0025a0",
+        "outputId": "a05c2d7e-4ff5-44bc-b3d1-30bb2bd4d7bc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 472
         }
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1257,19 +1286,19 @@
       ],
       "metadata": {
         "id": "qUAdFMHAVPnC",
-        "outputId": "625632be-2d4e-4e50-d3d9-576de5ad4f73",
+        "outputId": "6b8d9bbb-e9c4-41c9-cbd5-95e2d5b2d37e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Best k =  6\n",
-            "Best accuracy =  63.8095238095238  %\n"
+            "Best k =  7\n",
+            "Best accuracy =  60.0  %\n"
           ]
         }
       ]
